--- a/index.html
+++ b/index.html
@@ -91,19 +91,19 @@
                 <div class="carousel-item active">
                     <img src="./image/slider-1.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>First slide label</h5>
-                        <h3>SẢN PHẨM</h3>
-                        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-                        <a href="#" class="button-now">Mua Ngay</a>
+                        <h5>PETCARE</h5>
+                        <h3>Cho thú cưng khởi đầu tốt nhất</h3>
+                        <p>Cung cấp dịch vụ bác sĩ thú y có trình độ.</p>
+                        <a href="#" class="button-now">Liên hệ ngay</a>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="./image/slider-2.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
-                        <h3>ALL PRODUCT</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <a href="#" class="button-now">Mua Ngay</a>
+                        <h5>PETCARE</h5>
+                        <h3>Chó mèo tìm sen</h3>
+                        <p>San sẻ yêu thương cho các bé</p>
+                        <a href="#" class="button-now">Liên hệ ngay</a>
                     </div>
                 </div>
             </div>
@@ -170,7 +170,8 @@
                     <div class="item-info">
                         <a href="">
                             <h3>Chăm sóc thú cưng</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <p>Chúng tôi cung cấp các dịch vụ hoàn chỉnh về tắm, cắt tóc & chải chuốt tại PetCare.</p>
+                            <a href="#" class="button-now-2">Xem chi tiết >></a>
                         </a>
                     </div>
                 </div>
@@ -181,7 +182,8 @@
                     <div class="item-info">
                         <a href="">
                             <h3>Thức ăn cho chó</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <p>Phù hợp với mọi giống loài và mọi lứa tuổi. Tiện lợi sử dụng hàng ngày, an toàn và tiết kiệm </p>
+                            <a href="#" class="button-now-2">Xem chi tiết >></a>
                         </a>
                     </div>
                 </div>
@@ -192,7 +194,8 @@
                     <div class="item-info">
                         <a href="">
                             <h3>Thức ăn cho mèo</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <p>Giúp boss khỏe mạnh, lông bóng mượt, tăng cường miễn dịch, phát triển trí não.</p>
+                            <a href="#" class="button-now-2">Xem chi tiết >></a>
                         </a>
                     </div>
                 </div>
@@ -202,8 +205,9 @@
                     <img src="./image/phukienchomeo.jpg" alt="">
                     <div class="item-info">
                         <a href="">
-                            <h3>Phụ kiện chó mèo</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <h3>Phụ kiện thứ cưng</h3>
+                            <p>Mẫu mã đa dạng, thiết kế bắt mắt. PetCare mang tới sự lựa chọn hoàn hảo nhất.</p>
+                            <a href="#" class="button-now-2">Xem chi tiết >></a>
                         </a>
                     </div>
                 </div>
@@ -214,7 +218,8 @@
                     <div class="item-info">
                         <a href="">
                             <h3>Chó mèo tìm sen</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <p>Tại đây, chúng tôi cũng cung cấp các dịch vụ cứu hộ và nhận nuôi thú cưng.</p>
+                            <a href="#" class="button-now-2">Xem chi tiết >></a>
                         </a>
                     </div>
                 </div>
@@ -225,7 +230,8 @@
                     <div class="item-info">
                         <a href="">
                             <h3>Ưu đãi</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <p>Mua sắm thả ga, không lo về giá khi nhập ngay #HELLOPETCARE.</p>
+                            <a href="#" class="button-now-2">Xem chi tiết >></a>
                         </a>
                     </div>
                 </div>
