--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <div class="carousel-item active">
                     <img src="./image/slider-1.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>PETCARE</h5>
+                        <h2>PETCARE</h2>
                         <h3>Cho thú cưng khởi đầu tốt nhất</h3>
                         <p>Cung cấp dịch vụ bác sĩ thú y có trình độ.</p>
                         <a href="#" class="button-now">Liên hệ ngay</a>
@@ -100,7 +100,7 @@
                 <div class="carousel-item">
                     <img src="./image/slider-2.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>PETCARE</h5>
+                        <h2>PETCARE</h2>
                         <h3>Chó mèo tìm sen</h3>
                         <p>San sẻ yêu thương cho các bé</p>
                         <a href="#" class="button-now">Liên hệ ngay</a>
@@ -121,48 +121,7 @@
 
     <!-- content -->
     <div class="grid">
-        <!-- <div class="row">
-            <div class="col-md-6 h-50">
-                <img src="./image/takecare.jpg" alt="">
-            </div>
-            <div class="col-md-6 h-50">
-                <h2>CHĂM SÓC THÚ CƯNG</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore, possimus.</p>
-                <a href="#" class="button-now">Xem Ngay</a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-6 h-50">
-                <h2>SẢN PHẨM CHÓ MÈO</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore, possimus.</p>
-                <a href="#" class="button-now">Sản phẩm cho chó</a>
-                <a href="#" class="button-now">Sản phẩm cho mèo</a>
-            </div>
-            <div class="col-md-6 h-50">
-                <img src="./image/spcho-meo.jpg" alt="">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-6 h-50">
-                <img src="./image/tapchithucung.jpg" alt="">
-            </div>
-            <div class="col-md-6 h-50">
-                <h2>TẠP CHÍ THÚ CƯNG</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore, possimus.</p>
-                <a href="#" class="button-now">Xem thêm</a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-6 h-50">
-                <h2>ƯU ĐÃI</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore, possimus.</p>
-                <a href="#" class="button-now">Mua Ngay</a>
-            </div>
-            <div class="col-md-6 h-50">
-                <img src="./image/sale.jpg" alt="">
-            </div>
-        </div> -->
-        <h3 class="content">Danh mục</h3>
+        <h2 class="content">Danh mục</h2>
         <div class="row">
             <div class="col-md-4">
                 <div class="select-item">
@@ -237,6 +196,46 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <!-- about us -->
+    <div class="grid">
+        <div class="about-us">
+            <h2>Tại sao nên chọn chúng tôi</h2>
+            <p>Là nhà cung cấp dịch vụ chăm sóc thú cưng hàng đầu, chúng tôi mong muốn giúp thú cưng của bạn có thể sống một cách trọn vẹn nhất.</p>
+            <p>Dưới đây là một số lý do tại sao khách hàng nên lựa chọn chúng tôi hơn những nhà chăm sóc khác.</p>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="choose-me">
+                        <span><i class="far fa-heart"></i></span>
+                        <div class="choose-me-info">
+                            <h3>Bác sĩ thú cưng</h3>
+                            <p>PetCare với đội ngũ bác sĩ thú y có trình độ chuyên môn cao.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="choose-me">
+                        <span><i class="far fa-heart"></i></span>
+                        <div class="choose-me-info">
+                            <h3>Chăm sóc thú cưng</h3>
+                            <p>Chúng tôi mang đến dịch vụ chăm sóc thú cưng với các phương pháp chăm sóc toàn diện từ A – Z. Tất cả đều với với mong muốn mang tới cho thú cưng của bạn một cuộc sống khỏe mạnh và hạnh phúc nhất.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="choose-me">
+                        <span><i class="far fa-heart"></i></span>
+                        <div class="choose-me-info">
+                            <h3>Yêu thương động vật</h3>
+                            <p>Chúng tôi làm việc hết mình với chữ tâm, trách nhiệm và lòng nhiệt huyết. Thú cưng luôn là những thành viên trong gia đình.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
     </div>
 
 
