--- a/index.html
+++ b/index.html
@@ -202,12 +202,12 @@
     <div class="grid">
         <div class="about-us">
             <h2>Tại sao nên chọn chúng tôi</h2>
-            <p>Là nhà cung cấp dịch vụ chăm sóc thú cưng hàng đầu, chúng tôi mong muốn giúp thú cưng của bạn có thể sống một cách trọn vẹn nhất.</p>
-            <p>Dưới đây là một số lý do tại sao khách hàng nên lựa chọn chúng tôi hơn những nhà chăm sóc khác.</p>
+            <p class="text">Là nhà cung cấp dịch vụ chăm sóc thú cưng hàng đầu, chúng tôi mong muốn giúp thú cưng của bạn có thể sống một cách trọn vẹn nhất.</p>
+            <p class="text">Tất cả đều với mong muốn mang tới cho thú cưng của bạn một cuộc sống khỏe mạnh và hạnh phúc nhất.</p>
             <div class="row">
                 <div class="col-md-4">
                     <div class="choose-me">
-                        <span><i class="far fa-heart"></i></span>
+                        <span><i class="fas fa-briefcase-medical"></i></span>
                         <div class="choose-me-info">
                             <h3>Bác sĩ thú cưng</h3>
                             <p>PetCare với đội ngũ bác sĩ thú y có trình độ chuyên môn cao.</p>
@@ -216,16 +216,16 @@
                 </div>
                 <div class="col-md-4">
                     <div class="choose-me">
-                        <span><i class="far fa-heart"></i></span>
+                        <span><i class="fas fa-paw"></i></span>
                         <div class="choose-me-info">
                             <h3>Chăm sóc thú cưng</h3>
-                            <p>Chúng tôi mang đến dịch vụ chăm sóc thú cưng với các phương pháp chăm sóc toàn diện từ A – Z. Tất cả đều với với mong muốn mang tới cho thú cưng của bạn một cuộc sống khỏe mạnh và hạnh phúc nhất.</p>
+                            <p>Chúng tôi mang đến dịch vụ chăm sóc thú cưng với các phương pháp chăm sóc toàn diện từ A – Z, trải nhiệm thoải mái và thư giãn. </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="choose-me">
-                        <span><i class="far fa-heart"></i></span>
+                        <span><i class="fas fa-heartbeat"></i></span>
                         <div class="choose-me-info">
                             <h3>Yêu thương động vật</h3>
                             <p>Chúng tôi làm việc hết mình với chữ tâm, trách nhiệm và lòng nhiệt huyết. Thú cưng luôn là những thành viên trong gia đình.</p>
