--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         <a href="">
                             <h3>Chăm sóc thú cưng</h3>
                             <p>Chúng tôi cung cấp các dịch vụ hoàn chỉnh về tắm, cắt tóc & chải chuốt tại PetCare.</p>
-                            <a href="#" class="button-now-2">Xem chi tiết >></a>
+                            <!-- <a href="#" class="button-now-2">Xem chi tiết >></a> -->
                         </a>
                     </div>
                 </div>
@@ -142,7 +142,7 @@
                         <a href="">
                             <h3>Thức ăn cho chó</h3>
                             <p>Phù hợp với mọi giống loài và mọi lứa tuổi. Tiện lợi sử dụng hàng ngày, an toàn và tiết kiệm </p>
-                            <a href="#" class="button-now-2">Xem chi tiết >></a>
+                            <!-- <a href="#" class="button-now-2">Xem chi tiết >></a> -->
                         </a>
                     </div>
                 </div>
@@ -154,7 +154,7 @@
                         <a href="">
                             <h3>Thức ăn cho mèo</h3>
                             <p>Giúp boss khỏe mạnh, lông bóng mượt, tăng cường miễn dịch, phát triển trí não.</p>
-                            <a href="#" class="button-now-2">Xem chi tiết >></a>
+                            <!-- <a href="#" class="button-now-2">Xem chi tiết >></a> -->
                         </a>
                     </div>
                 </div>
@@ -164,9 +164,9 @@
                     <img src="./image/phukienchomeo.jpg" alt="">
                     <div class="item-info">
                         <a href="">
-                            <h3>Phụ kiện thứ cưng</h3>
+                            <h3>Phụ kiện thú cưng</h3>
                             <p>Mẫu mã đa dạng, thiết kế bắt mắt. PetCare mang tới sự lựa chọn hoàn hảo nhất.</p>
-                            <a href="#" class="button-now-2">Xem chi tiết >></a>
+                            <!-- <a href="#" class="button-now-2">Xem chi tiết >></a> -->
                         </a>
                     </div>
                 </div>
@@ -178,7 +178,7 @@
                         <a href="">
                             <h3>Chó mèo tìm sen</h3>
                             <p>Tại đây, chúng tôi cũng cung cấp các dịch vụ cứu hộ và nhận nuôi thú cưng.</p>
-                            <a href="#" class="button-now-2">Xem chi tiết >></a>
+                            <!-- <a href="#" class="button-now-2">Xem chi tiết >></a> -->
                         </a>
                     </div>
                 </div>
@@ -190,7 +190,7 @@
                         <a href="">
                             <h3>Ưu đãi</h3>
                             <p>Mua sắm thả ga, không lo về giá khi nhập ngay #HELLOPETCARE.</p>
-                            <a href="#" class="button-now-2">Xem chi tiết >></a>
+                            <!-- <a href="#" class="button-now-2">Xem chi tiết >></a> -->
                         </a>
                     </div>
                 </div>
@@ -199,7 +199,7 @@
     </div>
 
     <!-- about us -->
-    <div class="grid">
+    <!-- <div class="grid">
         <div class="about-us">
             <h2>Tại sao nên chọn chúng tôi</h2>
             <p class="text">Là nhà cung cấp dịch vụ chăm sóc thú cưng hàng đầu, chúng tôi mong muốn giúp thú cưng của bạn có thể sống một cách trọn vẹn nhất.</p>
@@ -207,7 +207,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="choose-me">
-                        <span><i class="fas fa-briefcase-medical"></i></span>
+                        <i class="fas fa-briefcase-medical"></i>
                         <div class="choose-me-info">
                             <h3>Bác sĩ thú cưng</h3>
                             <p>PetCare với đội ngũ bác sĩ thú y có trình độ chuyên môn cao.</p>
@@ -216,7 +216,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="choose-me">
-                        <span><i class="fas fa-paw"></i></span>
+                        <i class="fas fa-paw"></i>
                         <div class="choose-me-info">
                             <h3>Chăm sóc thú cưng</h3>
                             <p>Chúng tôi mang đến dịch vụ chăm sóc thú cưng với các phương pháp chăm sóc toàn diện từ A – Z, trải nhiệm thoải mái và thư giãn. </p>
@@ -225,7 +225,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="choose-me">
-                        <span><i class="fas fa-heartbeat"></i></span>
+                        <i class="fas fa-heartbeat"></i>
                         <div class="choose-me-info">
                             <h3>Yêu thương động vật</h3>
                             <p>Chúng tôi làm việc hết mình với chữ tâm, trách nhiệm và lòng nhiệt huyết. Thú cưng luôn là những thành viên trong gia đình.</p>
@@ -236,8 +236,34 @@
         </div>
 
 
+    </div> -->
+    <div class="grid">
+        <h2 class="content-2">Tại sao nên chọn chúng tôi</h2>
     </div>
 
+    <div class="about-us">
+        <div class="item1">
+            <img src="./image/about-1.jpg" alt="">
+            <div class="info">
+                <h3>Bác sĩ thú cưng</h3>
+                <p>PetCare với đội ngũ bác sĩ thú y có trình độ chuyên môn cao.</p>
+            </div>
+        </div>
+        <div class="item2">
+            <img src="./image/about-2.jpg" alt="">
+            <div class="info">
+                <h3>Chăm sóc thú cưng</h3>
+                <p>Chúng tôi mang đến dịch vụ chăm sóc thú cưng với các phương pháp chăm sóc toàn diện từ A – Z, trải nhiệm thoải mái và thư giãn. </p>
+            </div>
+        </div>
+        <div class="item3">
+            <img src="./image/about-3.jpg" alt="">
+            <div class="info">
+                <h3>Yêu thương động vật</h3>
+                <p>Chúng tôi làm việc hết mình với chữ tâm, trách nhiệm và lòng nhiệt huyết. Thú cưng luôn là những thành viên trong gia đình.</p>
+            </div>
+        </div>
+    </div>
 
 
 
