--- a/index.html
+++ b/index.html
@@ -106,6 +106,15 @@
                         <a href="#" class="button-now">Liên hệ ngay</a>
                     </div>
                 </div>
+                <div class="carousel-item">
+                    <img src="./image/sale2.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <!-- <h2>PETCARE</h2>
+                        <h3>Chó mèo tìm sen</h3>
+                        <p>San sẻ yêu thương cho các bé</p> 
+                        <a href="#" class="button-now">Liên hệ ngay</a>-->
+                    </div>
+                </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
