--- a/index.html
+++ b/index.html
@@ -106,15 +106,6 @@
                         <a href="#" class="button-now">Liên hệ ngay</a>
                     </div>
                 </div>
-                <div class="carousel-item">
-                    <img src="./image/sale2.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <!-- <h2>PETCARE</h2>
-                        <h3>Chó mèo tìm sen</h3>
-                        <p>San sẻ yêu thương cho các bé</p> 
-                        <a href="#" class="button-now">Liên hệ ngay</a>-->
-                    </div>
-                </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -208,48 +199,9 @@
     </div>
 
     <!-- about us -->
-    <!-- <div class="grid">
-        <div class="about-us">
-            <h2>Tại sao nên chọn chúng tôi</h2>
-            <p class="text">Là nhà cung cấp dịch vụ chăm sóc thú cưng hàng đầu, chúng tôi mong muốn giúp thú cưng của bạn có thể sống một cách trọn vẹn nhất.</p>
-            <p class="text">Tất cả đều với mong muốn mang tới cho thú cưng của bạn một cuộc sống khỏe mạnh và hạnh phúc nhất.</p>
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="choose-me">
-                        <i class="fas fa-briefcase-medical"></i>
-                        <div class="choose-me-info">
-                            <h3>Bác sĩ thú cưng</h3>
-                            <p>PetCare với đội ngũ bác sĩ thú y có trình độ chuyên môn cao.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="choose-me">
-                        <i class="fas fa-paw"></i>
-                        <div class="choose-me-info">
-                            <h3>Chăm sóc thú cưng</h3>
-                            <p>Chúng tôi mang đến dịch vụ chăm sóc thú cưng với các phương pháp chăm sóc toàn diện từ A – Z, trải nhiệm thoải mái và thư giãn. </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="choose-me">
-                        <i class="fas fa-heartbeat"></i>
-                        <div class="choose-me-info">
-                            <h3>Yêu thương động vật</h3>
-                            <p>Chúng tôi làm việc hết mình với chữ tâm, trách nhiệm và lòng nhiệt huyết. Thú cưng luôn là những thành viên trong gia đình.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-    </div> -->
     <div class="grid">
         <h2 class="content-2">Tại sao nên chọn chúng tôi</h2>
     </div>
-
     <div class="about-us">
         <div class="item1">
             <img src="./image/about-1.jpg" alt="">
@@ -273,6 +225,119 @@
             </div>
         </div>
     </div>
+
+    <!-- counter -->
+    <div class="grid">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="counter-info">
+                    <h2>Nhà cung cấp dịch vụ chăm sóc thú cưng hàng đầu trên toàn quốc</h2>
+                    <p>
+                        Tại PetCare, chúng tôi tin rằng thú cưng của bạn phải được ở trong “môi trường tự do”, không căng thẳng với dịch vụ chăm sóc một kèm một mọi lúc. Đó là lý do tại sao chúng tôi cung cấp cho thú cưng trong nhà ngồi để thú cưng của bạn không bị căng thẳng
+                        về thể chất và tinh thần trong cũi, cơ sở nội trú hoặc nhà trẻ hoặc “khách sạn dành cho chó”, đồng thời đảm bảo rằng thú cưng của bạn có thể ở trong sự an toàn và thoải mái.
+                    </p>
+                </div>
+                <div id="shiva">
+                    <span class="count">2120</span>
+                </div>
+                <div id="shiva">
+                    <span class="count">1946</span>
+                </div>
+                <div id="shiva"><span class="count">1853</span>
+                </div>
+                <div class="title">Khách hàng</div>
+                <div class="title">Phản hồi</div>
+                <div class="title">Thú cưng</div>
+            </div>
+            <div class="col-md-6">
+                <div class="counter-img">
+                    <img src="./image/counter.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- footer -->
+    <footer>
+        <div class="row">
+            <div class="col-md-3">
+                <div class="footer1">
+                    <ul>
+                        <li>
+                            <img src="./image/logo-removebg.png" alt="photo">
+                        </li>
+                        <li>
+                            <p>Hotline: 0345500073</p>
+                        </li>
+                        <li>
+                            <li>
+                                <p>Địa chỉ: 210 Láng, Đống Đa, Hà Nội</p>
+                            </li>
+                        </li>
+                        <li>
+                            <p>Giờ mở cửa: 9h - 20h từ T2 đến T7</p>
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
+            <div class="col-md-3">
+                <div class="footer2">
+                    <h3>CHÍNH SÁCH CHUNG</h3>
+                    <ul>
+                        <li>
+                            <p>Chính sách giao hàng</p>
+                        </li>
+                        <li>
+                            <p>Phương thức thanh toán</p>
+                        </li>
+                        <li>
+                            <p>Chính sách đổi, trả hàng</p>
+                        </li>
+                        <li>
+                            <p>Tích điểm thành viên</p>
+                        </li>
+                    </ul>
+
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="footer3">
+                    <h3>KẾT NỐI</h3>
+                    <ul>
+                        <!-- <li>
+                            <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FTienTien307&tabs=timeline&width=300&height=200&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="300" height="200"
+                                style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+                        </li> -->
+                        <li>
+                            <a title="Facebook" href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a title="Instagram" href="#"><i class="fab fa-instagram"></i></a>
+                            <a title="Twitter" href=""><i class="fab fa-twitter"></i></a></li>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="footer4">
+                    <h3>CHĂM SÓC KHÁCH HÀNG</h3>
+                    <form action="" method="post">
+                        <input type="text" name="name" class="text-input" placeholder="Nhập tên của bạn...">
+                        <input type="email" name="email" class="text-input" placeholder="Nhập email...">
+                        <br>
+                        <textarea name="message" class="text-input" placeholder="Để lại lời nhắn..." style="height: 80px;"></textarea>
+                        <br>
+                        <button type="submit" class="btn-send">
+                            <i class="far fa-paper-plane"></i>
+                            Send
+                        </button>
+                    </form>
+                </div>
+
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; Copyright PetShop 2020</p>
+        </div>
+    </footer>
 
 
 
@@ -306,7 +371,21 @@
                 colorMenuCon2.classList.remove("bgBlack");
             }
         }
+
+        // counter
+        $('.count').each(function() {
+            $(this).prop('Counter', 0).animate({
+                Counter: $(this).text()
+            }, {
+                duration: 4000,
+                easing: 'swing',
+                step: function(now) {
+                    $(this).text(Math.ceil(now));
+                }
+            });
+        });
     </script>
+
 </body>
 
 </html>
