--- a/index.html
+++ b/index.html
@@ -239,15 +239,19 @@
                 </div>
                 <div id="shiva">
                     <span class="count">2120</span>
+                    <p>Khách hàng</p>
                 </div>
                 <div id="shiva">
                     <span class="count">1946</span>
+                    <p>Phản hồi</p>
                 </div>
-                <div id="shiva"><span class="count">1853</span>
+                <div id="shiva">
+                    <span class="count">1853</span>
+                    <p>Thú cưng</p>
                 </div>
-                <div class="title">Khách hàng</div>
+                <!-- <div class="title">Khách hàng</div>
                 <div class="title">Phản hồi</div>
-                <div class="title">Thú cưng</div>
+                <div class="title">Thú cưng</div> -->
             </div>
             <div class="col-md-6">
                 <div class="counter-img">
